--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "twrnc": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "postcss": "^8.4.38"
   },
   "private": true
 }
