--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "twrnc": "^4.2.0"
   },
   "devDependencies": {
